LinkedIn/custom.css
.text-center
{
  text-align: center;
}
body
{
  font-family: sans-serif;
  color:white;
  background-color:#002233;
  margin: 5vh;
}
#in
{
  background-color: #4875B4;
  border-radius: 0.5vh;
  padding: 0.4vh;
  margin-left: 0.5vh;
}
.mainbox
{
  background-color:#404040;
  width: 50vh;
  float: left;
  align-content: center;
  border-radius:0.5vh;
  margin-top: 2vh;
  padding: 4vh;
}
.space
{
  float: left;
  min-width:65vh;
  color:#002233;
}
input
{
  width: 38vh;
  margin:.1vh;
  padding: 2vh;
  border-radius: 2%;
  border:none;
}
.button
{
  background-color: #4875B4;
  border: none;
  border-radius: 0.3vh;
  min-width: 42vh;
  color:white;
  font-size: 1vw;
  margin:1vh;
  padding: 1vh;
}

